// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomWebhookSettings /> spec renders the component 1`] = `
<div
  class="euiFormRow"
  id="random_html_id-row"
  style="max-width: 700px;"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label"
      for="random_html_id"
    >
      Method
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <input
            id="random_html_id"
            type="hidden"
            value=""
          />
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <span
                class="euiScreenReaderOnly"
                id="random_html_id"
              >
                Select an option: , is selected
              </span>
              <button
                aria-haspopup="true"
                aria-labelledby="random_html_id random_html_id"
                class="euiSuperSelectControl"
                type="button"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomWebhookSettings /> spec renders the component 2`] = `
<div
  class="euiFormRow"
  id="random_html_id-row"
  style="max-width: 700px;"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label"
      for="random_html_id"
    >
      Method
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <input
            id="random_html_id"
            type="hidden"
            value=""
          />
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <span
                class="euiScreenReaderOnly"
                id="random_html_id"
              >
                Select an option: , is selected
              </span>
              <button
                aria-haspopup="true"
                aria-labelledby="random_html_id random_html_id"
                class="euiSuperSelectControl"
                type="button"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomWebhookSettings /> spec renders the component with errors 1`] = `
<div
  class="euiFormRow"
  id="random_html_id-row"
  style="max-width: 700px;"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label"
      for="random_html_id"
    >
      Method
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <input
            id="random_html_id"
            type="hidden"
            value=""
          />
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <span
                class="euiScreenReaderOnly"
                id="random_html_id"
              >
                Select an option: , is selected
              </span>
              <button
                aria-haspopup="true"
                aria-labelledby="random_html_id random_html_id"
                class="euiSuperSelectControl"
                type="button"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomWebhookSettings /> spec renders the component with errors 2`] = `
<div
  class="euiFormRow"
  id="random_html_id-row"
  style="max-width: 700px;"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label"
      for="random_html_id"
    >
      Method
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
    >
      <div
        class="euiPopover__anchor"
      >
        <div>
          <input
            id="random_html_id"
            type="hidden"
            value=""
          />
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <span
                class="euiScreenReaderOnly"
                id="random_html_id"
              >
                Select an option: , is selected
              </span>
              <button
                aria-haspopup="true"
                aria-labelledby="random_html_id random_html_id"
                class="euiSuperSelectControl"
                type="button"
              />
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
